app/stylesheets/admin/design/_modals.scss
/* jqModal base Styling courtesy of;
  Brice Burgess <bhb@iceburg.net> */

/* The Window's CSS z-index value is respected (takes priority). If none is supplied,
  the Window's z-index value will be set to 3000 by default (via jqModal.js). */

.jqmWindow {
    display: none;

    position: fixed;
    top: 17%;
    left: 50%;

    width: 600px;

    background-color: #EEE;
    color: #333;
    border: 1px solid black;
    padding: 12px;
    width: 600px;
}

.jqmOverlay { background-color: #000; }

/* Background iframe styling for IE6. Prevents ActiveX bleed-through (<select> form elements, etc.) */
* iframe.jqm {position:absolute;top:0;left:0;z-index:-1;
  width: expression(this.parentNode.offsetWidth+'px');
  height: expression(this.parentNode.offsetHeight+'px');
}

/* Fixed posistioning emulation for IE6
     Star selector used to hide definition from browsers other than IE6
     For valid CSS, use a conditional include instead */
* html .jqmWindow {
     position: absolute;
     top: expression((document.documentElement.scrollTop || document.body.scrollTop) + Math.round(17 * (document.documentElement.offsetHeight || document.body.clientHeight) / 100) + 'px');
}

#fr_modal {
  background-color: white;
  border: 5px solid #3F5B75;
  display: none;
  padding: 1em;
  position: fixed;
  top: 5em;
  width: 500px;
}

#fr_modal .jqmClose {
  position: absolute;
  right: .5em;
  top: .5em;
}


.fr-modal {
  background-color: white;
  border: 5px solid #3F5B75;
  display: none;
  padding: 1em;
  position: fixed;
  top: 5em;
  width: 500px;
  max-height: 700px;
  overflow: scroll;

  .jqmClose {
    position: absolute;
    right: 1em;
    top: 1em;
  }

  h3.title_bar {
    border-top: none;
    margin-bottom: 0.5em;
    border-bottom: 2px solid #888;
    margin-top: 0;
    text-transform: uppercase;
    font-size: 1.8em !important;
  }
}
.fr-modal.wide { width: 650px !important; }

.fr-modal.admin-crop-modal {
  height: 640px;
  width: 950px !important;
}

